# azure-sphere-combo-cifar10

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README_RTCORE.md  app_manifest.json  main.c  testio.c
Hardware/mt3620_rdb/: sample_hardware.json
Hardware/mt3620_rdb/inc/hw/: sample_hardware.h
arducam_driver/: ll.c
azure-sphere-combo-cifar10-hlcore/: app_manifest.json
azure-sphere-combo-cifar10-hlcore/arducam_driver/: ll.c
azure-sphere-combo-cifar10-hlcore/ili9341_driver/: ili9341.h
azure-sphere-combo-cifar10-rtcore/: CMakeLists.txt  main.c
azure-sphere-combo-cifar10-rtcore/CMSIS/DSP/Testing/: addToDB.py
azure-sphere-combo-cifar10-rtcore/nn/: nn.c  testdata.h
hlcore/: CMakeLists.txt  CMakeSettings.json  main.c  testio.c  testio.h
hlcore/Hardware/mt3620_rdb/: sample_hardware.json
hlcore/ili9341_driver/: ili9341.c  text.c
ili9341_driver/: ili9341.c  ili9341.h  ili9341_ll.c
rtcore/: CMakeLists.txt  CMakeSettings.json  Log_Debug.c  Log_Debug.h  app_manifest.json  launch.vs.json  linker.ld  mt3620-intercore.c
rtcore/nn/: nn.h
